Can replace photo but not for header

--- a/.gitignore
+++ b/.gitignore
@@ -312,3 +312,5 @@ __pycache__/
 /BestBoQ/BestBoQ/ViewSwitcher.ascx.cs
 /BestBoQ/BestBoQ/ViewSwitcher.ascx
 /BestBoQ/BestBoQ/testgenpdf.aspx.designer.cs
+/BestBoQ/BestBoQ/GeneratedDocument/000173_contract.docm
+/BestBoQ/BestBoQ/Images/Logo/Vitamilk47/vitamilk47.png
