update code replace

--- a/.gitignore
+++ b/.gitignore
@@ -314,3 +314,4 @@ __pycache__/
 /BestBoQ/BestBoQ/testgenpdf.aspx.designer.cs
 /BestBoQ/BestBoQ/GeneratedDocument/000173_contract.docm
 /BestBoQ/BestBoQ/Images/Logo/Vitamilk47/vitamilk47.png
+/BestBoQ/BestBoQ/GeneratedDocument
